--- a/cve24029.html
+++ b/cve24029.html
@@ -42,6 +42,37 @@
             color: white;
             cursor: pointer;
         }
+
+        /* İki sütun düzeni için stil */
+        .two-column-layout {
+            display: flex;
+            justify-content: space-between;
+            flex-wrap: wrap;
+        }
+
+        .cve-section, .articles-section {
+            flex: 1;
+            min-width: 300px; /* Mobil uyumluluk için minimum genişlik */
+            margin: 10px;
+        }
+
+        .cve-container, .blog-container {
+            padding: 10px;
+        }
+
+        .cve-card, .blog-card {
+            background-color: #444; /* Kart arka plan rengi */
+            padding: 10px;
+            margin: 5px 0;
+            border-radius: 5px;
+        }
+
+        .footer {
+            text-align: center;
+            padding: 20px;
+            background-color: #222; /* Footer arka plan rengi */
+            color: white;
+        }
     </style>
 </head>
 <body>
@@ -137,63 +168,55 @@ check_vulnerability("http://example.com/vulnerable_endpoint")
                         <a href="#">Siber Tehditlere Karşı 5 Yeni Yöntem</a>
                     </div>
                     <div class="blog-card">
-                        <a href="#">2024'ün En Popüler VPN Hizmetleri</a>
+                        <a href="#">2024'ün En Önemli Siber Güvenlik Eğilimleri</a>
                     </div>
                     <div class="blog-card">
-                        <a href="#">Phishing Saldırılarında Yeni Taktikler</a>
+                        <a href="#">Veri Güvenliği İçin En İyi Uygulamalar</a>
+                    </div>
+                    <div class="blog-card">
+                        <a href="#">Siber Savaş ve Geleceği</a>
                     </div>
                 </div>
             </section>
         </div>
-
     </main>
 
     <footer class="footer">
-        <p>&copy; 2024 Atakan Ayaz | Tüm Hakları Saklıdır</p>
+        <p>&copy; 2024 Atakan Ayaz | Tüm hakları saklıdır.</p>
     </footer>
 
     <script>
+        // Çok dilli destek fonksiyonu
         const translations = {
             en: {
                 title: "Welcome to my website",
-                content: "This is an example of multilingual support using JavaScript.",
+                content: "This is a multilingual support example using JavaScript.",
                 riskStatusTitle: "Risk Status",
-                riskStatusContent: "Such a vulnerability can allow attackers to gain remote access to your system, making it very dangerous. Systems with outdated or weak security measures are more susceptible to such attacks. If an attacker manages to exploit this vulnerability, they can gain full control over the system, access sensitive data, and launch larger attacks.",
+                riskStatusContent: "This type of vulnerability can be quite dangerous as it allows attackers to gain remote access to your system, especially if the system is unpatched or has weak security measures.",
                 cveTitle: "CVE-2024-24029 Vulnerability",
-                cveSummary: "<strong>Summary:</strong> CVE-2024-24029 is a critical vulnerability that allows remote code execution in certain software. Attackers can send malicious code to affected systems to gain unauthorized access.",
+                cveSummary: "CVE-2024-24029 is a critical vulnerability that allows for remote code execution in certain software.",
                 usageScenariosTitle: "Usage Scenarios",
                 usageScenariosContent: "The CVE-2024-24029 vulnerability is commonly exploited in the following ways:",
                 socialEngineering: "Social Engineering: Redirecting users to fake websites or exploiting the vulnerability through malicious emails.",
-                automatedAttacks: "Automated Attacks: Attackers can identify known vulnerabilities using browsers and inject malicious code into target systems.",
+                automatedAttacks: "Automated Attacks: Attackers identifying known vulnerabilities using scanners and injecting malicious code into target systems.",
                 solutionStepsTitle: "Solution Steps",
                 solutionStepsList: [
-                    "To mitigate the effects of this vulnerability, it is essential to follow these steps:",
-                    "Software Updates: Regularly check for and install software and system updates.",
-                    "Firewalls and Intrusion Detection Systems: Use firewalls effectively and install intrusion detection systems to monitor potential threats.",
+                    "To mitigate the effects of this vulnerability, it is important to follow these steps:",
+                    "Software Updates: Regularly check and install software and system updates.",
+                    "Firewall and Intrusion Detection Systems: Effectively use firewalls and implement intrusion detection systems to monitor potential threats.",
                     "Network Monitoring: Regularly monitor your network traffic and detect unusual activities.",
-                    "Training and Awareness: Train users against social engineering attacks and inform them about how to recognize such threats.",
-                    "Security Patches: Apply security patches promptly to prevent exploitation of known vulnerabilities."
+                    "Training and Awareness: Educate users about social engineering attacks and how to recognize such threats.",
+                    "Security Patches: Apply security patches in a timely manner to prevent exploitation of known vulnerabilities."
                 ],
                 codeExampleTitle: "Code Example:",
-                codeExample: # Simple security check in Python
-import requests
-
-def check_vulnerability(url):
-    response = requests.get(url)
-    if "vulnerable" in response.text:
-        print("Vulnerability exists!")
-    else:
-        print("Secure.")
-
-check_vulnerability("http://example.com/vulnerable_endpoint")
             },
             tr: {
                 title: "Web siteme hoş geldiniz",
                 content: "JavaScript kullanarak çok dilli destek örneği.",
                 riskStatusTitle: "Risk Durumu",
-                riskStatusContent: "Bu tür bir açık, saldırganların sisteminize uzaktan erişim sağlamasına yol açabileceği için oldukça tehlikelidir. Özellikle güncellenmemiş veya zayıf güvenlik önlemlerine sahip sistemler, bu tür saldırılara daha açık hale gelir. Eğer bir saldırgan bu açığı kullanmayı başarırsa, sistem üzerinde tam kontrol sağlayabilir, hassas verilere erişebilir ve daha büyük saldırılar gerçekleştirebilir.",
+                riskStatusContent: "Bu tür bir açık, saldırganların sisteminize uzaktan erişim sağlamasına yol açabileceği için oldukça tehlikelidir. Özellikle güncellenmemiş veya zayıf güvenlik önlemlerine sahip sistemler, bu tür saldırılara daha açık hale gelir.",
                 cveTitle: "CVE-2024-24029 Güvenlik Açığı",
-                cveSummary: "<strong>Özet:</strong> CVE-2024-24029, belirli yazılımlarda uzaktan kod yürütmeye olanak tanıyan kritik bir güvenlik açığıdır. Saldırganlar, etkilenmiş sistemlere kötü niyetli kod göndererek yetkisiz erişim sağlayabilir.",
+                cveSummary: "CVE-2024-24029, belirli yazılımlarda uzaktan kod yürütmeye olanak tanıyan kritik bir güvenlik açığıdır.",
                 usageScenariosTitle: "Kullanım Senaryoları",
                 usageScenariosContent: "CVE-2024-24029 açığı, genellikle aşağıdaki yollarla kullanılmaktadır:",
                 socialEngineering: "Sosyal Mühendislik: Kullanıcıların sahte web sitelerine yönlendirilmesi veya kötü niyetli e-postalar aracılığıyla açığın istismar edilmesi.",
@@ -208,44 +231,36 @@ check_vulnerability("http://example.com/vulnerable_endpoint")
                     "Güvenlik Yamaları: Güvenlik yamalarını zamanında uygulayarak bilinen açıkların istismarını önleyin."
                 ],
                 codeExampleTitle: "Kod Örneği:",
-                codeExample: # Python ile basit bir güvenlik kontrolü
-import requests
-
-def check_vulnerability(url):
-    response = requests.get(url)
-    if "vulnerable" in response.text:
-        print("Açık var!")
-    else:
-        print("Güvenli.")
-
-check_vulnerability("http://example.com/vulnerable_endpoint")
             }
         };
 
         function changeLanguage(language) {
-            document.getElementById('title').innerText = translations[language].title;
-            document.getElementById('content').innerText = translations[language].content;
-            document.getElementById('risk-status-title').innerText = translations[language].riskStatusTitle;
-            document.getElementById('risk-status-content').innerHTML = translations[language].riskStatusContent;
-            document.getElementById('cve-title').innerText = translations[language].cveTitle;
-            document.getElementById('cve-summary').innerHTML = translations[language].cveSummary;
-            document.getElementById('usage-scenarios-title').innerText = translations[language].usageScenariosTitle;
-            document.getElementById('usage-scenarios-content').innerText = translations[language].usageScenariosContent;
-            document.getElementById('social-engineering').innerText = translations[language].socialEngineering;
-            document.getElementById('automated-attacks').innerText = translations[language].automatedAttacks;
-            document.getElementById('solution-steps-title').innerText = translations[language].solutionStepsTitle;
+            document.getElementById("title").innerText = translations[language].title;
+            document.getElementById("content").innerText = translations[language].content;
 
-            // Çözüm adımlarını güncelle
-            const solutionStepsList = document.getElementById('solution-steps-list');
-            solutionStepsList.innerHTML = ""; // Önceki listeyi temizle
+            document.getElementById("risk-status-title").innerText = translations[language].riskStatusTitle;
+            document.getElementById("risk-status-content").innerText = translations[language].riskStatusContent;
+
+            document.getElementById("cve-title").innerText = translations[language].cveTitle;
+            document.getElementById("cve-summary").innerText = translations[language].cveSummary;
+
+            document.getElementById("usage-scenarios-title").innerText = translations[language].usageScenariosTitle;
+            document.getElementById("usage-scenarios-content").innerText = translations[language].usageScenariosContent;
+
+            document.getElementById("social-engineering").innerText = translations[language].socialEngineering;
+            document.getElementById("automated-attacks").innerText = translations[language].automatedAttacks;
+
+            document.getElementById("solution-steps-title").innerText = translations[language].solutionStepsTitle;
+
+            const solutionStepsList = document.getElementById("solution-steps-list");
+            solutionStepsList.innerHTML = ""; // Mevcut listeyi temizle
             translations[language].solutionStepsList.forEach(step => {
-                const li = document.createElement('li');
+                const li = document.createElement("li");
                 li.innerText = step;
                 solutionStepsList.appendChild(li);
             });
 
-            document.getElementById('code-example-title').innerText = translations[language].codeExampleTitle;
-            document.querySelector('pre').innerText = translations[language].codeExample;
+            document.getElementById("code-example-title").innerText = translations[language].codeExampleTitle;
         }
     </script>
 </body>
