--- a/cve24029.html
+++ b/cve24029.html
@@ -76,11 +76,8 @@
     </style>
 </head>
 <body>
-    <!-- Dil seçimi düğmeleri -->
-  
     <header class="main-header">
         <h1 id="main-title">Atakan Ayaz | Siber Güvenlik Blogu</h1>
-      
         <nav>
             <ul>
                 <li><a href="index.html" id="home-link">Ana Sayfa</a></li>
@@ -89,10 +86,10 @@
                 <li><a href="iletisim.html" id="contact-link">İletişim</a></li>
             </ul>
         </nav>
-            <div class="language-switch">
-        <button onclick="changeLanguage('en')">English</button>
-        <button onclick="changeLanguage('tr')">Türkçe</button>
-    </div>
+        <div class="language-switch">
+            <button onclick="changeLanguage('en')">English</button>
+            <button onclick="changeLanguage('tr')">Türkçe</button>
+        </div>
     </header>
 
     <main>
@@ -179,85 +176,41 @@ check_vulnerability("http://example.com/vulnerable_endpoint")
     </main>
 
     <footer class="footer">
-        <p>&copy; 2024 Atakan Ayaz | Tüm hakları saklıdır.</p>
+        <p>&copy; 2024 Atakan Ayaz. Tüm hakları saklıdır.</p>
     </footer>
 
     <script>
-        // Çok dilli destek fonksiyonu
-        const translations = {
-            en: {
-                title: "Welcome to my website",
-                content: "This is a multilingual support example using JavaScript.",
-                riskStatusTitle: "Risk Status",
-                riskStatusContent: "This type of vulnerability can be quite dangerous as it allows attackers to gain remote access to your system, especially if the system is unpatched or has weak security measures.",
-                cveTitle: "CVE-2024-24029 Vulnerability",
-                cveSummary: "CVE-2024-24029 is a critical vulnerability that allows for remote code execution in certain software.",
-                usageScenariosTitle: "Usage Scenarios",
-                usageScenariosContent: "The CVE-2024-24029 vulnerability is commonly exploited in the following ways:",
-                socialEngineering: "Social Engineering: Redirecting users to fake websites or exploiting the vulnerability through malicious emails.",
-                automatedAttacks: "Automated Attacks: Attackers identifying known vulnerabilities using scanners and injecting malicious code into target systems.",
-                solutionStepsTitle: "Solution Steps",
-                solutionStepsList: [
-                    "To mitigate the effects of this vulnerability, it is important to follow these steps:",
-                    "Software Updates: Regularly check and install software and system updates.",
-                    "Firewall and Intrusion Detection Systems: Effectively use firewalls and implement intrusion detection systems to monitor potential threats.",
-                    "Network Monitoring: Regularly monitor your network traffic and detect unusual activities.",
-                    "Training and Awareness: Educate users about social engineering attacks and how to recognize such threats.",
-                    "Security Patches: Apply security patches in a timely manner to prevent exploitation of known vulnerabilities."
-                ],
-                codeExampleTitle: "Code Example:",
-            },
-            tr: {
-                title: "Web siteme hoş geldiniz",
-                content: "JavaScript kullanarak çok dilli destek örneği.",
-                riskStatusTitle: "Risk Durumu",
-                riskStatusContent: "Bu tür bir açık, saldırganların sisteminize uzaktan erişim sağlamasına yol açabileceği için oldukça tehlikelidir. Özellikle güncellenmemiş veya zayıf güvenlik önlemlerine sahip sistemler, bu tür saldırılara daha açık hale gelir.",
-                cveTitle: "CVE-2024-24029 Güvenlik Açığı",
-                cveSummary: "CVE-2024-24029, belirli yazılımlarda uzaktan kod yürütmeye olanak tanıyan kritik bir güvenlik açığıdır.",
-                usageScenariosTitle: "Kullanım Senaryoları",
-                usageScenariosContent: "CVE-2024-24029 açığı, genellikle aşağıdaki yollarla kullanılmaktadır:",
-                socialEngineering: "Sosyal Mühendislik: Kullanıcıların sahte web sitelerine yönlendirilmesi veya kötü niyetli e-postalar aracılığıyla açığın istismar edilmesi.",
-                automatedAttacks: "Otomatik Saldırılar: Saldırganların, internet üzerindeki bilinen açıkları tarayıcılar kullanarak belirleyip, hedef sistemlere kötü niyetli kod enjekte etmesi.",
-                solutionStepsTitle: "Çözüm Adımları",
-                solutionStepsList: [
-                    "Bu açığın etkilerini azaltmak için aşağıdaki adımları takip etmek önemlidir:",
-                    "Yazılım Güncellemeleri: Yazılım ve sistem güncellemelerini düzenli olarak kontrol edin ve yükleyin.",
-                    "Güvenlik Duvarı ve Saldırı Tespit Sistemleri: Güvenlik duvarlarını etkin bir şekilde kullanın ve saldırı tespit sistemleri kurarak potansiyel tehditleri izleyin.",
-                    "Ağ İzleme: Ağ trafiğinizi düzenli olarak izleyin ve olağandışı aktiviteleri tespit edin.",
-                    "Eğitim ve Farkındalık: Kullanıcıları sosyal mühendislik saldırılarına karşı eğitin ve bu tür tehditlerin nasıl tanınacağı hakkında bilgi verin.",
-                    "Güvenlik Yamaları: Güvenlik yamalarını zamanında uygulayarak bilinen açıkların istismarını önleyin."
-                ],
-                codeExampleTitle: "Kod Örneği:",
+        function changeLanguage(lang) {
+            if (lang === 'en') {
+                document.getElementById('page-title').innerText = 'Atakan Ayaz | Cyber Security Blog';
+                document.getElementById('main-title').innerText = 'Atakan Ayaz | Cyber Security Blog';
+                document.getElementById('risk-status-title').innerText = 'Risk Status';
+                document.getElementById('risk-status-content').innerText = 'This type of vulnerability can allow attackers to gain remote access to your system, making it very dangerous. Systems that are not updated or have weak security measures are more vulnerable to such attacks. If an attacker manages to exploit this vulnerability, they can gain full control over the system, access sensitive data, and carry out larger attacks.';
+                document.getElementById('cve-title').innerText = 'CVE-2024-24029 Vulnerability';
+                document.getElementById('cve-summary').innerHTML = '<strong>Summary:</strong> CVE-2024-24029 is a critical vulnerability that allows remote code execution in certain software. Attackers can send malicious code to affected systems to gain unauthorized access.';
+                document.getElementById('usage-scenarios-title').innerText = 'Usage Scenarios';
+                document.getElementById('usage-scenarios-content').innerText = 'CVE-2024-24029 vulnerability is usually exploited in the following ways:';
+                document.getElementById('usage-scenarios-list').innerHTML = '<li>Social Engineering: Redirecting users to fake websites or exploiting the vulnerability through malicious emails.</li><li>Automated Attacks: Attackers identifying known vulnerabilities using scanners and injecting malicious code into target systems.</li>';
+                document.getElementById('solution-steps-title').innerText = 'Solution Steps';
+                document.getElementById('solution-steps-list').innerHTML = '<li>It is important to follow the steps below to mitigate the effects of this vulnerability:</li><li>Software Updates: Regularly check and install software and system updates.</li><li>Firewall and IDS: Effectively use firewalls and set up intrusion detection systems to monitor potential threats.</li><li>Network Monitoring: Regularly monitor your network traffic and detect unusual activities.</li><li>Training and Awareness: Train users against social engineering attacks and inform them about how to recognize such threats.</li><li>Security Patches: Timely apply security patches to prevent exploitation of known vulnerabilities.</li>';
+                document.getElementById('code-example-title').innerText = 'Code Example:';
+                document.querySelector('pre').innerText = '# Simple security check in Python\nimport requests\n\ndef check_vulnerability(url):\n    response = requests.get(url)\n    if "vulnerable" in response.text:\n        print("Vulnerability exists!")\n    else:\n        print("Safe.")\n        \ncheck_vulnerability("http://example.com/vulnerable_endpoint")';
+            } else {
+                // Türkçe dil içeriği
+                document.getElementById('page-title').innerText = 'Atakan Ayaz | Siber Güvenlik Blogu';
+                document.getElementById('main-title').innerText = 'Atakan Ayaz | Siber Güvenlik Blogu';
+                document.getElementById('risk-status-title').innerText = 'Risk Durumu';
+                document.getElementById('risk-status-content').innerText = 'Bu tür bir açık, saldırganların sisteminize uzaktan erişim sağlamasına yol açabileceği için oldukça tehlikelidir. Özellikle güncellenmemiş veya zayıf güvenlik önlemlerine sahip sistemler, bu tür saldırılara daha açık hale gelir. Eğer bir saldırgan bu açığı kullanmayı başarırsa, sistem üzerinde tam kontrol sağlayabilir, hassas verilere erişebilir ve daha büyük saldırılar gerçekleştirebilir.';
+                document.getElementById('cve-title').innerText = 'CVE-2024-24029 Güvenlik Açığı';
+                document.getElementById('cve-summary').innerHTML = '<strong>Özet:</strong> CVE-2024-24029, belirli yazılımlarda uzaktan kod yürütmeye olanak tanıyan kritik bir güvenlik açığıdır. Saldırganlar, etkilenmiş sistemlere kötü niyetli kod göndererek yetkisiz erişim sağlayabilir.';
+                document.getElementById('usage-scenarios-title').innerText = 'Kullanım Senaryoları';
+                document.getElementById('usage-scenarios-content').innerText = 'CVE-2024-24029 açığı, genellikle aşağıdaki yollarla kullanılmaktadır:';
+                document.getElementById('usage-scenarios-list').innerHTML = '<li>Sosyal Mühendislik: Kullanıcıların sahte web sitelerine yönlendirilmesi veya kötü niyetli e-postalar aracılığıyla açığın istismar edilmesi.</li><li>Otomatik Saldırılar: Saldırganların, internet üzerindeki bilinen açıkları tarayıcılar kullanarak belirleyip, hedef sistemlere kötü niyetli kod enjekte etmesi.</li>';
+                document.getElementById('solution-steps-title').innerText = 'Çözüm Adımları';
+                document.getElementById('solution-steps-list').innerHTML = '<li>Bu açığın etkilerini azaltmak için aşağıdaki adımları takip etmek önemlidir:</li><li>Yazılım Güncellemeleri: Yazılım ve sistem güncellemelerini düzenli olarak kontrol edin ve yükleyin.</li><li>Güvenlik Duvarı ve Saldırı Tespit Sistemleri: Güvenlik duvarlarını etkin bir şekilde kullanın ve saldırı tespit sistemleri kurarak potansiyel tehditleri izleyin.</li><li>Ağ İzleme: Ağ trafiğinizi düzenli olarak izleyin ve olağandışı aktiviteleri tespit edin.</li><li>Eğitim ve Farkındalık: Kullanıcıları sosyal mühendislik saldırılarına karşı eğitin ve bu tür tehditlerin nasıl tanınacağı hakkında bilgi verin.</li><li>Güvenlik Yamaları: Güvenlik yamalarını zamanında uygulayarak bilinen açıkların istismarını önleyin.</li>';
+                document.getElementById('code-example-title').innerText = 'Kod Örneği:';
+                document.querySelector('pre').innerText = '# Python ile basit bir güvenlik kontrolü\nimport requests\n\ndef check_vulnerability(url):\n    response = requests.get(url)\n    if "vulnerable" in response.text:\n        print("Açık var!")\n    else:\n        print("Güvenli.")\n        \ncheck_vulnerability("http://example.com/vulnerable_endpoint")';
             }
-        };
-
-        function changeLanguage(language) {
-            document.getElementById("title").innerText = translations[language].title;
-            document.getElementById("content").innerText = translations[language].content;
-
-            document.getElementById("risk-status-title").innerText = translations[language].riskStatusTitle;
-            document.getElementById("risk-status-content").innerText = translations[language].riskStatusContent;
-
-            document.getElementById("cve-title").innerText = translations[language].cveTitle;
-            document.getElementById("cve-summary").innerText = translations[language].cveSummary;
-
-            document.getElementById("usage-scenarios-title").innerText = translations[language].usageScenariosTitle;
-            document.getElementById("usage-scenarios-content").innerText = translations[language].usageScenariosContent;
-
-            document.getElementById("social-engineering").innerText = translations[language].socialEngineering;
-            document.getElementById("automated-attacks").innerText = translations[language].automatedAttacks;
-
-            document.getElementById("solution-steps-title").innerText = translations[language].solutionStepsTitle;
-
-            const solutionStepsList = document.getElementById("solution-steps-list");
-            solutionStepsList.innerHTML = ""; // Mevcut listeyi temizle
-            translations[language].solutionStepsList.forEach(step => {
-                const li = document.createElement("li");
-                li.innerText = step;
-                solutionStepsList.appendChild(li);
-            });
-
-            document.getElementById("code-example-title").innerText = translations[language].codeExampleTitle;
         }
     </script>
 </body>
