--- a/cve24029.html
+++ b/cve24029.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en"> <!-- Burada "en" ekleyerek dil ayarını yapıyoruz -->
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title id="page-title">Atakan Ayaz | Siber Güvenlik Blogu</title>
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap" rel="stylesheet">
+    <title id="page-title">Atakan Ayaz | Cyber Security Blog</title>
     <link rel="stylesheet" href="styles.css">
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap" rel="stylesheet">
     <style>
         /* Başlıklar için stil */
         .info-section h2,
